kuber-hw-08/src/1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
        - name: nginx
          image: nginx:1.25
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: myapp-cm-nginx
              mountPath: "/usr/share/nginx/html"
              readOnly: true
      volumes:
        - name: myapp-cm-nginx
          configMap:
            name: myapp-cm-nginx
