kuber-hw-08/src/2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: nginx-html
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html
