kuber-hw-08/src/1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nginx
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
